Phase 2A: Replace high-priority Guava Collections with Java 17 standard library
- Created CollectionUtils utility class with toList() methods
- Replaced Lists.newArrayList() with CollectionUtils.toList() (9 files)
- Replaced ImmutableList.of() with List.of() (4 files)
- Replaced ImmutableMap.of() with Map.of() (2 files)
- Refactored Closeables.closeQuietly() to try-with-resources (3 files)

Eliminated dependencies:
- com.google.common.collect.Lists
- com.google.common.collect.ImmutableList
- com.google.common.collect.ImmutableMap
- com.google.common.io.Closeables

Build status: All 22 modules build successfully